   The Z bin width is determined as 0.5 cm or 0.1% radiation length, which is smaller.
   
A) bremsbeam_ini.F: modify 1D histo h1Egamma to h2EgammaZ, add Z loop
B) bg_eve.F: use 2-D histo 'h2EgammaZ' to throw z and Egamma
C) bg_ctrl.inc: Add variable 'NHZ',  which means number of Z bins in 'h2EgammaZ'
D) lowen_eve.F: Use histogram ID=9010 to determine bin index, before it is 9000
E) bg_ntup_ini.F and bg_evec.inc: Add variable vz into the commom block and ntuple output. 

----------------------------------------------------------------------------
Version 1.0.0

1. Removed code/Makefile since it depends on Hall-D software.

2. Modified code/bg_hddm.c to disable HDDM related stuff.

3. Added Makefile which can compile this program in '-m64' mode.

4. Modified code/CMakeLists.txt to compile in '-m64' mode, the executable is linked
   against static library.
   
5. Added the following variables in input file:  
   beam current, target length, target density, target material.rad.length,
   and radiator thickness.
   From now on beam and target luminocity will be calculated using input parameters.
   Radiator thickness is used to control whether or not to use coherence bremsstrahlung
   or normal bremsstrahlung radiation.  If radiator thickness  > 1.0E-6 will 
   use coherence bremsstrahlung.
   
   The following files have been changed:
   code/bg_ctrl.inc
   code/bremsbeam_ini.F
   code/bg_ini.F
   code/cohbeam_ini.F
   code/cobrems.F

   These 3 cards were added in fort.15
C -- radiator thickness in cm, if >1.0E-6, will use coherence brem. photon
RADTHICK 0.00 
C -- electron beam current (uA)
CURRENT  15.0          
C -- Only Hydrogen target is supported, need more work for other target 
C -- tg length,density,material.rad.length. In cm, g/cm^3, g/cm^2.
TARGET  15.0   0.071   63.0470

6. Modified common block variable DCOLL (diameter of the radiator) to be in unit of cm.  
   Before it is in m, which is not consistant with other parameters in the same common block.